# voidsprite

./: .gitmodules
freesprite/: EditorBrushPicker.cpp  EditorLayerPicker.cpp  FileIO.cpp  main.cpp  platform.h  platform_linux.h
freesprite/libtga/: tga.c
linux-build/: .gitignore  CMakeLists.txt  _voidsprite.sh  build.sh
