cmake_minimum_required(VERSION 3.10)
project(freesprite)
set(CMAKE_CXX_STANDARD 23)
file(GLOB SRC ../freesprite/*.c* ../freesprite/**/*.c*)
link_directories(${CMAKE_SOURCE_DIR}/../freesprite/imagecdylib/target/release/)
add_executable(freesprite ${SRC})
target_link_libraries(freesprite z)
target_link_libraries(freesprite m)
target_link_libraries(freesprite c)
target_link_libraries(freesprite imagecdylib)
target_link_libraries(freesprite SDL2)
target_link_libraries(freesprite SDL2_image)
target_link_libraries(freesprite SDL2_ttf)
